give the paragraph elements a text align property with the value 'justify' to ensure text both edges of text are aligned with both margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,7 @@ footer{
     padding: 10px;
     font-family: Gilda Display, serif ;
     color: #6F754D;
+    text-align: justify;
 
 }
 
